Deploy css cache buster v4 to force layout update on mobile devices and fix Brave absolute positioning iOS webkit compat

--- a/index.css
+++ b/index.css
@@ -95,6 +95,8 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     background: rgba(5, 5, 16, 0.85);
